# opoch-toe-arcagi

./: pyproject.toml  receipts_H1-7_UNSAT_many_empties_00dbd492.json  receipts_H1-7_UNSAT_simple_007bbfb7.json  test_canvas_fixes.py
docs/: repo_structure.md
docs/WOs/: M0.md  M1.md  M2.md  M3.md  M4.md  M4_patch.md  WO-00.md  WO-01.md  WO-02.md  WO-03.md  WO-04a-H8H9.md  WO-04a.md  WO-05.md  WO-06.md  WO-07.md  WO-08.md  WO-09.md  WO-10.md  WO-11.md  WO-14.md  WO-14b.md  all_WOs.md  things_take_care.md
docs/human_pair_programmer_docs/: WO_expansion_instructions.md  bugs_to_take_care.md  implementer_instructions.md  reviewer_instructions.md
tests/: M0_FINAL_AUDIT_REPORT.md  analyze_m2_pixel_match.py  audit_wo03_line_by_line.md  check_witness_emit_contents.py  debug_serialization.py  debug_task_00576224.py  debug_test_payload.py  debug_wo03_apply_pose_anchor.py  debug_wo03_detailed.py  debug_wo03_mutation.py  get_fresh_receipts.py  test_canvas.py  test_canvas_h8h9.py  test_components.py  test_family_gating.py  test_features.py  test_forbids.py  test_lattice.py  test_lfp.py  test_lfp_integration.py  test_m0_comprehensive.py  test_m1_sweep.py  test_m2_sweep_h1_7.py  test_m2_sweep_regression.py  test_m2_unit.py  test_m3_runner.py  test_m3_sweep_h1_7.py  test_m3_witness_selector.py  test_output_transport.py  test_runner.py  test_runner_m4_simple.py  test_sub_wo02a_comprehensive.py  test_sub_wo_14b.py  test_unanimity.py  test_witness_emit.py  test_witness_emit_receipts.py  test_witness_learn.py  test_wo00.py  test_wo00_core_receipts.py  test_wo00_corrected.py  (+31 more)
(+28 files in other folders)
