[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcbit"
version = "0.1.0"
description = "ARC-AGI Bit-Algebra Solver - Deterministic, Receipts-First (Spec v1.5)"
requires-python = ">=3.12"
dependencies = [
    "blake3>=0.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
